--- a/src/components/AddNote/AddNote.css
+++ b/src/components/AddNote/AddNote.css
@@ -28,11 +28,11 @@
   flex-direction: column;
   padding: 20px;
   margin: 10px;
-  border: 3px solid rgb(37, 158, 214);
+  border: 3px solid gray;
   border-radius: 15px;
   max-width: 65%;
   width: 50%;
-  background-color: rgb(96, 184, 190);
+  background-color: #ffffff;
 }
 .form__container {
   display: flex;
