--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,10 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
   font-size: xx-large;
-  color: beige;
   padding-bottom: 20px;
   padding-left: 40%;
+}
+.heading {
+  font-size: 28px;
+  width: auto;
 }
